# noolang

./: .cursorrules  .env.test  .eslintrc.js  .git-push-test  .gitignore  .prettierrc.js  CI_AND_TESTING_IMPROVEMENTS.md  CI_FIX_SUMMARY.md  CLAUDE.md  CODE_REVIEW_IMPROVEMENTS_SUMMARY.md  COMPLETED_ACTIONS_SUMMARY.md  CONSTRAINT_TOPLEVEL_IMPLEMENTATION.md  DEPTH_FIRST_CONSTRAINT_PLAN.md  FINAL_CHECKIN_SUMMARY.md  JEST_PERFORMANCE_OPTIMIZATIONS.md  JEST_TO_UVU_MIGRATION_PLAN.md  JEST_TO_UVU_POC.md  LANGUAGE_ARCHITECTURE.md  LICENSE  LSP_TESTING.md  MIGRATION_COMPLETION_SUMMARY.md  MIGRATION_EXECUTION_GUIDE.md  MIGRATION_STATUS.md  MODERNIZATION_SUMMARY.md  OPERATOR_WEAKNESSES_REPORT.md  PHASE2_COMPLETION_SUMMARY.md  PHASE3_COMPLETION_SUMMARY.md  PIPELINE_FIXES_SUMMARY.md  PROGRESS.md  PR_DESCRIPTION.md  README-VSCODE.md  README.md  REPL_AUTOMATION_COMPLETE.md  REPL_AUTOMATION_SUMMARY.md  REPL_MIGRATION_SUMMARY.md  SELF_CODE_REVIEW.md  SKIPPED_TESTS_STATUS.md  TEST_ORGANIZATION_SUMMARY.md  TRAIT_SYSTEM_FIXED.md  TYPE_ANNOTATION_FIX_SUMMARY.md  (+137 more)
lsp/: .gitignore  AUTOMATED_TESTING_COMPLETE.md  BUG_FIX_SUMMARY.md  Cargo.toml  LSP_IMPLEMENTATION_STATUS.md  LSP_IMPROVEMENTS_SUMMARY.md  LSP_ORGANIZATION_SUMMARY.md  LSP_TESTING.md  NAVIGATION_FEATURES_SUMMARY.md  README.md  install-extension.sh  language-configuration.json  run_core_tests.sh  run_tests.sh  simple-test.noo  test-improved.noo  test-lsp-features.noo  test-lsp-navigation.sh  test-lsp.noo  test-lsp.sh  test-navigation.noo  test_completion.txt  test_e2e.sh  test_enhanced_lsp.sh  test_input.txt  test_lsp.rs  test_summary.md  (+2 more)
(+660 files in other folders)
